namespaces/nagios/auth-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 4180
